fix file input size on firefox

--- a/source/stylesheets/_forms.sass
+++ b/source/stylesheets/_forms.sass
@@ -128,7 +128,7 @@ input
 
   input
     &[type='file']
-      padding: 1.013em 0.5em
+      padding: 1.0em 0.5em
     &[type='range']
       border: 0
       margin: 0.6em 0 0 0
